[package]
name = "cp_mod_tool"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.9"
thiserror = "1.0.22"
serde = {version="1.0.118", features=["derive"]}
toml = "0.5.7"
walkdir = "2"
serde_json = "1.0.60"
anyhow = "1.0.35"
argh = "0.1.4"
console = "0.13.0"
